# logitechmouse

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  BUILD_PLAN.md  MOUSE_SERVICE_RCA.md  PRD.md
docs/superpowers/plans/: 2026-04-25-phase2-evdev-listener.md  2026-04-26-phase4-actions-ring.md  2026-04-27-device-grab.md  2026-04-27-qt-sigterm-systemd.md  2026-04-29-ring-management-cli.md
docs/superpowers/specs/: 2026-04-25-phase2-evdev-listener-design.md  2026-04-26-phase4-actions-ring-design.md  2026-04-27-device-grab-design.md  2026-04-27-qt-sigterm-systemd-design.md  2026-04-29-ring-management-design.md
examples/: config.toml
scripts/: dump-keys.py
src/logitechmouse/: __init__.py  actions.py  config.py  config_writer.py  device.py  device_grab.py  main.py  overlay.py  x11.py
src/logitechmouse/cli/: __init__.py  action.py  check_config.py  config_menu.py  devices.py  install_service.py  listen.py  profile.py  ring.py  run.py
src/logitechmouse/overlay/: __init__.py  cursor.py  geometry.py  ring.py  widget.py
tests/: conftest.py  test_actions.py  test_check_config.py  test_cli_action.py  test_cli_config_menu.py  test_cli_parser.py  test_cli_profile.py  test_cli_ring.py  test_config.py  test_config_ring.py  test_config_writer.py  test_cursor_poller.py  test_device_grab.py  test_device_grab_integration.py  test_device_readloop.py  test_device_resolve.py  test_geometry.py  test_install_service.py  test_listen_cli.py  test_listen_grab.py  test_listen_qt_sigterm.py  test_listen_qt_smoke.py  test_overlay_theme.py  test_overlay_widget.py  test_profiles.py  test_ring_controller.py
