[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logitechmouse"
version = "0.1.0"
description = "Linux utility for Logitech MX mouse shortcuts and an Actions Ring-style workflow"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Christopher Landaverde" }
]
dependencies = []

[project.scripts]
logitechmouse = "logitechmouse.main:main"

[project.optional-dependencies]
dev = [
  "tomli>=2.0.1; python_version < '3.11'",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
