[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logitechmouse"
version = "0.1.0"
description = "Linux utility for Logitech MX mouse shortcuts and an Actions Ring-style workflow"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Christopher Landaverde" }
]
dependencies = [
  "evdev>=1.6",
]

[project.scripts]
logitechmouse = "logitechmouse.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-qt~=4.4",
]
ring = [
  "PyQt6~=6.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "requires_display: skipped when DISPLAY env var is unset (Qt widget tests)",
  "requires_uinput: skipped when /dev/uinput is not writable (grab integration tests)",
]
