[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logitechmouse"
version = "0.1.0"
description = "Linux utility for Logitech MX mouse shortcuts and an Actions Ring-style workflow"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Christopher Landaverde" }
]
keywords = ["logitech", "mx", "mouse", "linux", "evdev", "uinput", "x11", "shortcuts"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Desktop Environment",
  "Topic :: Utilities",
]
dependencies = [
  "evdev>=1.6",
]

[project.urls]
Homepage = "https://github.com/ChristopherLandaverde/logitechmouse"
Repository = "https://github.com/ChristopherLandaverde/logitechmouse"
Issues = "https://github.com/ChristopherLandaverde/logitechmouse/issues"
Changelog = "https://github.com/ChristopherLandaverde/logitechmouse/blob/main/CHANGELOG.md"

[project.scripts]
logitechmouse = "logitechmouse.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-qt~=4.4",
]
ring = [
  "PyQt6~=6.6",
  "qtawesome>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "requires_display: skipped when DISPLAY env var is unset (Qt widget tests)",
  "requires_uinput: skipped when /dev/uinput is not writable (grab integration tests)",
]
